# caffe-android-lib

./: .gitmodules  Dockerfile  README.md  build.sh  config.sh
caffe/: CMakeLists.txt
caffe-android-demo/: gradle.properties  local.properties
caffe-android-demo/app/: build.gradle
caffe-android-demo/app/caffe-opencl/: CMakeLists.txt  link.sh
caffe-android-demo/app/src/main/java/com/sh1r0/caffe_android_demo/: MainActivity.java
caffe-android-demo/app/src/main/java/com/sh1r0/caffe_android_lib/: CaffeMobile.java
caffe-android-demo/gradle/wrapper/: gradle-wrapper.properties
caffe/cmake/: Dependencies.cmake
caffe/cmake/Modules/: FindOpenBLAS.cmake  FindViennaCL.cmake
caffe/examples/cpp_segmentation/: segmentation.cpp
caffe/include/caffe/: common.hpp
makefile_patch/leveldb/: Makefile
makefile_patch/snappy/: Makefile.am
scripts/: build_caffe_opencl.sh  build_leveldb.sh  build_snappy.sh  get_viennacl.sh  make-toolchain.sh
